--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -23,8 +23,8 @@
             <tr>
               <td><%= attachment_image_tag(group, :image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
               <td><%= link_to group.name, group_path(group) %></td>
-              
               <td><%= group.introduction %></td>
+              <td><%= group.users.count %></td>
               <td>
                   <% if group.owner_id == current_user.id %>
                    <%= link_to 'Edit', edit_group_path(group), class: "btn btn-sm btn-success edit_group_#{group.id}" %>
